--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sai Sumakar</title>
-    <link rel="icon" href="./assets/Group 1.svg">
-    <script type="module" src="/src/index.jsx"></script>
+    
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/responsive.css">
   </head>
@@ -24,22 +22,10 @@
     <div id="projects-page" class="section black-background">
       <div id="projects" style="margin-top: 3rem;"></div>
     </div>
-
-    <!-- <div id="skills-page" class="section white-background">
-      <div class="languages-container">
-        <h3 class="langs-title">LANGUAGES</h3>
-        <div id="langs"></div>
-      </div>
-      <div class="frameworks-container">
-        <h3 class="fws-title">FRAMEWORKS</h3>
-        <div id="fws"></div>
-      </div>
-    </div> -->
     <div id="skills-page" class="section white-background"></div>
 
-    <div id="contact-page" class="section black-background">
-      <!-- <div id="socials"></div> -->
-    </div>
+    <div id="contact-page" class="section black-background"></div>
     
   </body>
+  <script type="module" src="/src/index.jsx"></script>
 </html>
