--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
     <div id="contact-page" class="section black-background"></div>
     
   </body>
-  <script type="module" src="/src/index.jsx"></script>
+  <script type="module" src="./src/index.jsx"></script>
 </html>
