--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sai Sumakar</title>
     <!-- <script type="module" crossorigin src="./src/index-BkvQQcSK.js"></script> -->
     <!-- <link rel="stylesheet" crossorigin href="./src/index-B4mFb3Ti.css"> -->
-    <script type="module" crossorigin src="./src/index.jsx"></script>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/responsive.css">
+    <script type="module" src="/src/index.jsx"></script>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/responsive.css">
   </head>
 
   <body>
